update 4th configuration